Spellchecks and updates to release checklist
Several typos in the book were found and reported by Antonio Diaz Diaz
which have been corrected in this commit.

Also, following the preparation of version 0.3.31 for Debian, the release
checklist was slightly modified to be more straightforward.

--- a/NEWS
+++ b/NEWS
@@ -83,7 +83,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Pixel scale measurement when dimension scale isn't equal or doesn't
   decrease (bug #51385).
 
-  Inproper types for function code in MakeProfiles (bug #51467).
+  Improper types for function code in MakeProfiles (bug #51467).
 
 
 
