Correct type when storing value of mode in MakeProfiles
the `mode' element of the `mkprofparams' (defined in MakeProfile's
`main.h') was defined as `uint8_t', but in `ui_parse_coordinate_mode', it
was being read as an `int'. So it would crash on many systems (older
compilers).

This was found thanks to crash reports of Debian for Gnuastro 0.3.31.

This fixes bug #51476.

--- a/NEWS
+++ b/NEWS
@@ -85,6 +85,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Improper types for function code in MakeProfiles (bug #51467).
 
+  Crashes on 32-bit and big-endian systems (bug #51476).
+
+
 
 
 
