--- a/NEWS
+++ b/NEWS
@@ -58,8 +58,15 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   `--crpix1', `--crpix2', `--crval1', `--crval2' and `--resolution'
   options.
 
-  `gal_fits_img_info' now also returns the name and units of the dataset
-  (if they aren't NULL). So it takes two extra arguments.
+  `gal_data_free_contents': when the input `gal_data_t' is a tile, its
+  `array' element will not be freed. This enables safe usage of this
+  function (and thus `gal_data_free') on tiles without worrying about the
+  memory block associated with the tile.
+
+  `gal_box_bound_ellipse' is the new name for the old
+  `gal_box_ellipse_in_box' (to be more clear and avoid repetition of the
+  term `box'). The input position angle is now also in degrees, not
+  radians.
 
   `gal_box_overlap' now works on data of any dimensionality and thus also
   needs the number of dimensions (elements in each input array).
@@ -68,9 +75,18 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   argument and the number of dimensions as another. This allows it to work
   on any dimensionality.
 
+  `gal_fits_img_info' now also returns the name and units of the dataset
+  (if they aren't NULL). So it takes two extra arguments.
+
   `gal_wcs_pixel_scale' now replaces the old `gal_wcs_pixel_scale_deg',
   since it doesn't only apply to degrees. The pixel scale units are defined
   by the units of the WCS.
+
+  `GAL_TILE_PARSE_OPERATE' (only when `OTHER' is given) can now parse and
+  operate on different datasets independent of the size of allocated block
+  of memory (the tile sizes of `IN' and `OTHER' have to be idential, but
+  not their allocated blocks of memory). Until now, it was necessary for
+  the two blocks to have the same size and this is no longer the case.
 
 ** Bug fixes
 
