MakeProfiles checks for reasonable values in columns
Until now, there were no checks to see if the column values are reasonable
or not (for example radius is not negative). Tests have been added for this
sanity check on the radius, axis ratio and truncation columns with this
commit.

Also, internally the position columns are defined before the other columns
to be more clear.

--- a/README
+++ b/README
@@ -37,7 +37,7 @@ context under categories/chapters.
     and growing set of arithmetic, mathematical, and even statistical
     operators (for example +, -, *, /, sqrt, log, min, average, median).
 
-  - BuildProgram (astbuildprog) Compile, link and run programs that depend
+  - BuildProgram (astbuildprog): Compile, link and run programs that depend
     on the Gnuastro library. BuildProgram will automatically link with the
     libraries that Gnuastro depends on, so there is no need to explicily
     mention them every time you are compiling a Gnuastro library dependent
