Radial distance profile added to MakeProfiles
A new radial distance profile is added to MakeProfiles. To make it more
clear, MakeProfile's source was also cleaned to be easier to read and
debug.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   to specify the PC matrix, CUNIT and CTYPE world coordinate system
   keywords of the output FITS file.
 
+  MakeProfiles: the new `distance' profile will save the radial distance of
+  each pixel. This may be used to define your own profiles that are not
+  currently supported in MakeProfiles.
+
 ** Removed features
 
 ** Changed features
