New --mcolisbrightness option for MakeProfiles
It might happen that the user knows the total brightness (sum of pixel
values) of the profiles desired, but doesn't want to go through the trouble
of converting it to a magnitude (which also requires a zeropoint). With
this commit, the new `--mcolisbrightness' option will tell MakeProfiles to
interpret the value in `--mcol' as total brightness, not magnitude.

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   each pixel. This may be used to define your own profiles that are not
   currently supported in MakeProfiles.
 
+  MakeProfiles: with the new `--mcolisbrightness' ("mcol-is-brightness")
+  option, the `--mcol' values of the catalog will be interpretted as total
+  brightness (sum of pixel values), not magnitude.
+
 ** Removed features
 
 ** Changed features
